--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Ispit iz modula razvojna okolina</h1>
   <h2>Predavač: <strong>Matej Pavić</strong></h2>
+  <p>Polaznik: <strong>Saša Banjavčić</strong></p>
 </body>
 </html>
